Fixed word wrap with long messages

--- a/App/Client/assets/css/messageBubble.css
+++ b/App/Client/assets/css/messageBubble.css
@@ -59,7 +59,7 @@ html {
   display: flex;
   align-items: flex-end;
   margin-bottom: 10px;
-  word-wrap: "break-word";
+  word-wrap: break-word;
 }
 .msgSystem {
   display: flex-grow;
